--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,32 +1,19 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
   "dependencies": {
-    "axios": "^1.12.2",
-    "bootstrap": "^5.3.8",
-    "chart.js": "^4.5.0",
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "@vue/cli-service": "^5.0.8",
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.4",
+    "vue": "^3.4.38"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/eslint-parser": "^7.12.16",
-    "@babel/plugin-syntax-import-assertions": "^7.27.1",
-    "@babel/preset-env": "^7.28.3",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "babel-loader": "^10.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-loader": "^17.4.2"
+    "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.25.1",
+    "@babel/plugin-syntax-import-assertions": "^7.24.7",
+    "@babel/preset-env": "^7.25.4",
+    "babel-loader": "^9.2.1",
+    "vue-loader": "^17.4.2",
+    "webpack": "^5.94.0",
+    "webpack-dev-server": "^4.15.1"
   }
 }
