--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
@@ -14,6 +15,6 @@
     "babel-loader": "^9.2.1",
     "vue-loader": "^17.4.2",
     "webpack": "^5.94.0",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^5.1.0"
   }
 }
