--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
-    "vue": "^3.4.38"
+    "vue": "^3.4.38",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -16,5 +17,10 @@
     "vue-loader": "^17.4.2",
     "webpack": "^5.94.0",
     "webpack-dev-server": "^5.1.0"
+  },
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   }
 }
