--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
+    "cors": "^2.8.5",
     "vue": "^3.4.38",
     "vue-router": "^4.4.5"
   },
