--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "sqlite3": "^5.1.7",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "xlsx": "^0.18.5"
   }
 }
