--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@babel/eslint-parser": "^7.25.1",
     "@babel/plugin-syntax-import-assertions": "^7.24.7",
     "@babel/preset-env": "^7.25.4",
+    "@types/html-minifier-terser": "^7.0.2",
+    "assert": "^2.1.0",
     "babel-loader": "^9.2.1",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "vue-loader": "^17.4.2",
     "webpack": "^5.94.0",
     "webpack-dev-server": "^5.1.0"
