--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@babel/plugin-syntax-import-assertions": "^7.24.7",
     "@babel/preset-env": "^7.25.4",
     "@types/html-minifier-terser": "^7.0.2",
+    "@types/minimist": "^1.2.5",
     "assert": "^2.1.0",
     "babel-loader": "^9.2.1",
     "path-browserify": "^1.0.1",
